--- a/app/src/main/res/layout/fragment_issues.xml
+++ b/app/src/main/res/layout/fragment_issues.xml
@@ -4,12 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World"
-        android:textAlignment="center" />
+        android:layout_gravity="center_horizontal"
+        />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/issues_list"
