--- a/app/src/main/res/layout/item_issue.xml
+++ b/app/src/main/res/layout/item_issue.xml
@@ -7,7 +7,7 @@
     <TextView
         android:id="@+id/name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:fontFamily="monospace"
         android:gravity="center_vertical"
         android:text="@string/app_name"
@@ -15,5 +15,7 @@
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:typeface="sans" />
+        android:typeface="sans"
+        android:background="@drawable/shape_border"
+        />
 </LinearLayout>
