1. Issue Detail page added. 2. IssuePresneterTest added

--- a/app/src/main/res/drawable/shape_border.xml
+++ b/app/src/main/res/drawable/shape_border.xml
@@ -3,15 +3,15 @@
     <solid android:color="#FFFFFF"/>
     <stroke
         android:width="3dp"
-        android:color="#0FECFF"/>
+        android:color="@android:color/holo_orange_light"/>
     <padding
         android:bottom="5dp"
         android:left="5dp"
         android:right="5dp"
         android:top="5dp"/>
     <corners
-        android:bottomLeftRadius="7dp"
-        android:bottomRightRadius="7dp"
-        android:topLeftRadius="7dp"
-        android:topRightRadius="7dp"/>
+        android:bottomLeftRadius="2dp"
+        android:bottomRightRadius="2dp"
+        android:topLeftRadius="2dp"
+        android:topRightRadius="2dp"/>
 </shape>
