1. Espresso Tests added. 2. Loader and Repository refactored. 3. Lambda expressions removed because the Jack compiler slowed down AndroidStudio and Gradle build.

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/detail_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -11,17 +12,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.61"
-        android:text="Full Name" />
+        android:text="Full Name"
+        android:textAlignment="center"
+        android:gravity="center_vertical"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/count"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.61"
-        android:text="TextView" />
+        android:text="TextView"
+        android:visibility="gone"
+        />
 
     <CalendarView
-        android:id="@+id/calendar"
+        android:id="@+id/issue_date"
         android:layout_width="match_parent"
         android:layout_height="210dp"
         android:layout_weight="0.70" />
